--- a/js_landingPractise/package.json
+++ b/js_landingPractise/package.json
@@ -1,11 +1,15 @@
 {
-  "name": "testpackage",
+  "name": "js_landingpractise",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "json-server": "^1.0.0-beta.3"
+  }
 }
