--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "js_landingpractise",
+  "name": "js-learning-1",
   "version": "1.0.0",
-  "main": "script.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "json-server": "^1.0.0-beta.3"
+    "webpack": "^5.97.1",
+    "webpack-cli": "^5.1.4"
   }
 }
